--- a/src/css/vertical-layout-light/_Login.scss
+++ b/src/css/vertical-layout-light/_Login.scss
@@ -49,6 +49,8 @@
     color: #20252a !important;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out !important;
 }
-.dashboard-margin{
-    margin-top: 875px;
+.chart-width{
+    width: 78%;
+    margin: 7.5rem auto;
 }
+
