--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -834,3 +834,6 @@ background-color: #78BB07;
     .set_margin{
       margin: 60px 0px 0px 220px;
     }
+    .icon_margin{
+      margin-left: 20px;
+    }
