--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -837,3 +837,6 @@ background-color: #78BB07;
     .icon_margin{
       margin-left: 20px;
     }
+    .input_date{
+      padding-left: 20px !important;
+    }
