--- a/src/App.scss
+++ b/src/App.scss
@@ -4,5 +4,6 @@
 @import './css/vertical-layout-light/allform';
 @import './css/vertical-layout-light/jotform';
 @import './css/vertical-layout-light/Jotlink.scss';
-@import './css/vertical-layout-light/setting'
+@import './css/vertical-layout-light/setting';
+@import './css//vertical-layout-light/Preview'
 
