--- a/src/css/vertical-layout-light/_navbar.scss
+++ b/src/css/vertical-layout-light/_navbar.scss
@@ -20,3 +20,11 @@ color: #fff;
 .react-datepicker__input-container input{
     width: 85% !important;
 }
+/* previewNav css*/
+.resizedTextbox {
+    // width: 350px; 
+    width: 100%;
+    height: 25px; 
+    padding: 1px;
+margin-right: 2px;
+}
