--- a/src/css/vertical-layout-light/Jotlink.scss
+++ b/src/css/vertical-layout-light/Jotlink.scss
@@ -36,7 +36,7 @@
     position: fixed;
     z-index: 1;
 	// background: linear-gradient(270deg,#ff6100,#ffb841 99.97%);
-  background-color: #1F3BB3;
+  background: linear-gradient(270deg,#1F3BB3,#2e69ff 99.97%);
 }
 .jot-link {
 	padding: 1rem 2rem 1.15rem;
