--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -25,7 +25,7 @@ a:focus {
 }
 
 .navbar {
-    padding: 10px 10px;
+    // padding: 10px 10px;
     background: #fff;
     border: none;
     border-radius: 4px;
@@ -185,7 +185,7 @@ ul.CTAs a {
 
 #content {
     width: 100%;
-    padding: 20px;
+    // padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
 }
