--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -26,7 +26,7 @@ a:focus {
 
 .navbar {
     // padding: 10px 10px;
-    background: #fff;
+    // background: #fff;
     border: none;
     border-radius: 4px;
     margin-bottom: 40px;
