--- a/src/css/vertical-layout-dark/style.css
+++ b/src/css/vertical-layout-dark/style.css
@@ -21072,7 +21072,7 @@ code {
   font-weight: bold;
   font-size: 26px;
   line-height: 36px;
-  color: #D8D9E3;
+  /* color: #D8D9E3; */
   margin-bottom: 0;
 }
 
