--- a/src/css/vertical-layout-light/New folder/style.css
+++ b/src/css/vertical-layout-light/New folder/style.css
@@ -21280,7 +21280,7 @@ code {
   font-weight: bold;
   font-size: 26px;
   line-height: 36px;
-  color: #000000;
+  /* color: #000000; */
   margin-bottom: 0;
 }
 
