--- a/src/css/vertical-layout-light/_Preview.scss
+++ b/src/css/vertical-layout-light/_Preview.scss
@@ -38,7 +38,8 @@
     justify-content: space-around;
   }
   .dlYzuC{
-    color:#ffffff !important;
+    color:black !important;
+    background-color:#F4F5F7 !important;
 }
 
 // label{
@@ -390,7 +391,7 @@
 .formpage_nav{
   width: 100%;
   height: 70px;
-  background: #5E50F9;
+  background: linear-gradient(270deg, #1F3BB3, #2e69ff 99.97%);
 
   /* float: right; */
   display: flex;
