--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -143,11 +143,47 @@ input[type="radio"]{
 }
 
 .auth-form-btn{
-    background: #2ee86a;
-    border: 1px solid #2ee86a;
+ 
+  
     padding: 8px 32px;
     font-size: 20px;
     line-height: 1.3333333;
     border-radius: 6px;
-    color: white;
+   
+}
+.hover-text-white{
+    background: #2ee86a !important;
+    border: 1px solid #2ee86a ;
+    padding: 8px 32px;
+    font-size: 20px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+    color: white !important;
+}
+.hover-text-white:hover{
+    background: #51c275;
+    border: 1px solid #2ee86a ;
+    padding: 8px 32px;
+    font-size: 20px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+    color: white !important;
+}
+.hover-text-dark{
+    background: #000 !important;
+    border: 1px solid #000 ;
+    padding: 8px 32px;
+    font-size: 20px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+    color: white !important;
+}
+.hover-text-dark:hover{
+    background: #2ee86a !important;
+    border: 1px solid #2ee86a ;
+    padding: 8px 32px;
+    font-size: 20px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+    color: white !important;
 }
