--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -71,7 +71,7 @@ a:focus {
 #sidebars {
     min-width: 250px;
     max-width: 250px;
-    background: #ECF0F1;
+    // background: #ECF0F1;
     color: #6f76a7;
     transition: all 0.3s;
 }
@@ -82,7 +82,7 @@ a:focus {
 
 #sidebars .sidebar-header {
     padding: 20px;
-    background: #ECF0F1;
+    // background: #ECF0F1;
 }
 
 #sidebars ul.components {
