--- a/src/css/vertical-layout-light/_setting.scss
+++ b/src/css/vertical-layout-light/_setting.scss
@@ -82,7 +82,9 @@
   .page-wrapper.toggled .sidebar-wrapper2 {
     left: 0px;
   }
-  
+  .page-content{
+    height: 100vw;
+  }
   @media screen and (min-width: 768px) {
     .page-wrapper.toggled .page-content {
       padding-left: 300px;
@@ -432,9 +434,9 @@
   
   /*-----------------------------chiller-theme-------------------------------------------------*/
   
-  .chiller-theme .sidebar-wrapper2 {
-      background: #31353D;
-  }
+  // .chiller-theme .sidebar-wrapper2 {
+  //     background: #31353D;
+  // }
   
   .chiller-theme .sidebar-wrapper2 .sidebar-header,
   .chiller-theme .sidebar-wrapper2 .sidebar-search,
@@ -593,7 +595,8 @@
     padding: 12px 27px 12px 26px;
   }
 .setting_form_ml{
-  margin-left: 325px;
+  margin-left: 309px;
+  height: 100vh;
 }
   .show-more-btn{
     background: #9b8a73;
@@ -608,8 +611,8 @@
   .thankyou-radio{
     width: 55%;
     box-shadow: 0 2px 2px rgb(87 100 126 / 21%);
-    background-color: #ffffff;
-    padding: 16px 12px 14px 14px;
+    // background-color: #ffffff;
+    padding: 12px 7px 31px 14px;
   }
   .ml_contain{
     margin-left: 80px;
