--- a/src/css/vertical-layout-light/_Register.scss
+++ b/src/css/vertical-layout-light/_Register.scss
@@ -169,6 +169,9 @@ input[type="radio"]{
     border-radius: 6px;
     color: white !important;
 }
+.FBKub{
+   height: 100vh !important
+}
 .hover-text-dark{
     background: #000 !important;
     border: 1px solid #000 ;
