--- a/src/css/vertical-layout-light/_allform.scss
+++ b/src/css/vertical-layout-light/_allform.scss
@@ -84,7 +84,9 @@ a:focus {
     padding: 0px;
     // background: #ECF0F1;
 }
-
+.card-header-tabs{
+    background-color: blue;
+}
 #sidebars ul.components {
     padding: 20px 15px;
     // border-bottom: 1px solid #47748b;
